добавила новые  картинки

--- a/source/index.html
+++ b/source/index.html
@@ -130,26 +130,26 @@
                         <ul class="option__list swiper-wrapper">
                             <li class="option__item swiper-slide">
                                 <a class="option__link">
-                                    <img class="option__image" src="./img/haval-m6.png" srcset="./img/haval-m6@2x.png" width="467" height="239" alt="HAVAL M6 черный">
+                                    <img class="option__image" src="./img/haval-m6.png" srcset="./img/haval-m6@2x.png" width="467" height="239" alt="HAVAL M6 серый.">
                                 </a>
                             </li>
                             <li class="option__item swiper-slide">
                                 <a class="option__link">
-                                    <img class="option__image" src="./img/haval-m6.png" width="467" height="239" alt="HAVAL M6 черный" style="filter: invert();">
-                                        </a>
-                            </li>
-                            <li class="option__item swiper-slide">
-                                <a class="option__link">
-                                    <img class="option__image" src="./img/haval-m6.png" width="467" height="239" alt="HAVAL M6 черный" style="filter: blur(5px);">
+                                    <img class="option__image" src="./img/haval-m6-white.png" srcset="./img/haval-m6-white@2x.png" width="467" height="239" alt="HAVAL M6 белый.">
                                 </a>
                             </li>
                             <li class="option__item swiper-slide">
                                 <a class="option__link">
-                                    <img class="option__image" src="./img/haval-m6.png" width="467" height="239" alt="HAVAL M6 черный" style="opacity: .5;">
+                                    <img class="option__image" src="./img/haval-m6-black.png" srcset="./img/haval-m6-black@2x.png" width="467" height="239" alt="HAVAL M6 черный.">
                                 </a>
                             </li>
                         </ul>
-                                    
+                        <p class="card__toggles slider__toggles swiper-pagination">
+                            <!-- <span class="swiper-pagination-bullet" tabindex="0" role="button" aria-label="Go to slide 2"></span> -->
+                            <button class="swiper-pagination-bullet swiper-pagination-bullet--black swiper-pagination-bullet--current" type="button"><span class="visually-hidden">черный</span></button>
+                            <button class="swiper-pagination-bullet" type="button"><span class="visually-hidden">белый</span></button>
+                            <button class="swiper-pagination-bullet" type="button"><span class="visually-hidden">серый</span></button>
+                        </p>            
                     </div>
                     <ul class="card__advantages advantages">
                         <li class="advantages__item advantages__item--pricetag">Выгода по госпрограмме</li>
@@ -173,22 +173,22 @@
                         <ul class="option__list swiper-wrapper">
                             <li class="option__item swiper-slide">
                                 <a class="option__link">
-                                    <img class="option__image" src="./img/haval-dargoX.png" srcset="./img/haval-dargoX@2x.png" width="467" height="239" alt="HAVAL M6 черный">
+                                    <img class="option__image" src="./img/haval-dargoX-graphite.png" srcset="./img/haval-dargoX-graphite@2x.png" width="467" height="239" alt="HAVAL M6 графитовый.">
                                 </a>
                             </li>
                             <li class="option__item swiper-slide">
                                 <a class="option__link">
-                                    <img class="option__image" src="./img/haval-dargoX.png" width="467" height="239" alt="HAVAL M6 черный" style="filter: invert();">
+                                    <img class="option__image" src="./img/haval-dargoX-black.png" srcset="./img/haval-dargoX-black@2x.png" width="467" height="239" alt="HAVAL M6 черный.">
                                 </a>
                             </li>
                             <li class="option__item swiper-slide">
                                 <a class="option__link">
-                                    <img class="option__image" src="./img/haval-dargoX.png" width="467" height="239" alt="HAVAL M6 черный" style="filter: blur(5px);">
+                                    <img class="option__image" src="./img/haval-dargoX-agate.png"srcset="./img/haval-dargoX-agate@2x.png" width="467" height="239" alt="HAVAL M6 агат.">
                                 </a>
                             </li>
                             <li class="option__item swiper-slide">
                                 <a class="option__link">
-                                    <img class="option__image" src="./img/haval-dargoX.png" width="467" height="239" alt="HAVAL M6 черный" style="opacity: .5;">
+                                    <img class="option__image" src="./img/haval-dargoX.png" srcset="./img/haval-dargoX@2x.png" width="467" height="239" alt="HAVAL M6 красный.">
                                 </a>
                             </li>
                         </ul>
